force-app/main/default/objects/Trigger_Log__c/Trigger_Log__c.object-meta.xml
<CustomObject>
    <label>Trigger Log</label>
    <nameField>
        <label>Trigger_Log</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trigger Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>