force-app/main/default/objects/Trigger_Log__c/fields/Error_Reason_Short__c.field-meta.xml
<CustomField>
    <fullName>Error_Reason_Short__c</fullName>
    <label>Error Reason Short</label>
    <length>255</length>
    <type>Text</type>
</CustomField>