force-app/main/default/objects/Trigger_Log__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <label>Operation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INSERT</fullName>
            </value>
            <value>
                <fullName>UPDATE</fullName>
            </value>
            <value>
                <fullName>DELETE</fullName>
            </value>
            <value>
                <fullName>UNDELETE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>