force-app/main/default/objects/Trigger_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Result__c</columns>
    <columns>Operation__c</columns>
    <columns>Object__c</columns>
    <columns>Error_Reason__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>